nxn/test/pass/001-001-004.nxn
// Explicitly shadow a variable and return it

fn main() i32 {
    let new x = 0;
    let +x = 1;
    let x = 2;
    return x;
}
